# GHLCodeAPI

./: .env  .gitignore  Cargo.toml  Rocket.toml
db/: interpretations_db.sqlite
src/lib/: data.rs  mod.rs  routes.rs
src/lib/data/: query.rs  testdata.rs
