[package]
name = "ghlcode_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghlcode_api_httpd"
path = "src/bin/httpd.rs"

[lib]
name = "ghlcode_api_lib"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86" 

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ "macros", "runtime-tokio-rustls" ]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
